[project]
name = "bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.100",
    "google-generativeai>=0.8.6",
    "openenv-core>=0.2.0",
    "python-dotenv>=1.2.2",
    "streamlit>=1.56.0",
    "uvicorn[standard]>=0.23",
]

[project.scripts]
server = "server.app:main"
